--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".OrderdetailsActivity"></activity>
         <activity android:name=".AddorderActivity"></activity>
         <activity android:name=".UserActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".UserdetailsActivity"></activity>
     </application>
 
 </manifest>
