--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-25
 android.library=false
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=../../workspace/appcompat_v7
